[gd_scene load_steps=9 format=3 uid="uid://cs6ginkulskya"]

[ext_resource type="PackedScene" uid="uid://j87r323v31qv" path="res://Scenes/side.tscn" id="1_ima0g"]
[ext_resource type="Script" path="res://Scripts/MapCamera2D.gd" id="2_pceco"]
[ext_resource type="Script" path="res://Scripts/Multiplayer.gd" id="3_0fpdy"]
[ext_resource type="Texture2D" uid="uid://djuk0g87nhrhc" path="res://cardbutton.png" id="4_ipp72"]
[ext_resource type="Texture2D" uid="uid://chv6t7kvxgx0s" path="res://gear.png" id="4_n5n8m"]
[ext_resource type="Texture2D" uid="uid://biy2phmp4flym" path="res://gearSelected.png" id="5_13mvd"]
[ext_resource type="Texture2D" uid="uid://dt60hgar0dc4g" path="res://checkOff.png" id="6_1x0cl"]
[ext_resource type="Texture2D" uid="uid://tqwtibgdslug" path="res://checkOn.png" id="7_n8awk"]

[node name="Board" type="Node2D"]
position = Vector2(1020, 1566)
script = ExtResource("3_0fpdy")
player_side = ExtResource("1_ima0g")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/side.tscn")
spawn_path = NodePath("..")
spawn_limit = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Info" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_right = 329.0
offset_bottom = 1079.0
size_flags_vertical = 3
color = Color(0, 0, 0, 0.623529)

[node name="Preview" type="TextureRect" parent="CanvasLayer/Info"]
layout_mode = 1
anchors_preset = -1
offset_left = 10.0
offset_top = 10.0
offset_right = 309.0
offset_bottom = 429.0
texture = ExtResource("4_ipp72")

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Info"]
layout_mode = 1
anchors_preset = -1
offset_left = 10.0
offset_top = 449.0
offset_right = 312.0
offset_bottom = 958.0

[node name="CardText" type="Label" parent="CanvasLayer/Info/ScrollContainer"]
custom_minimum_size = Vector2(302, 615)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap_mode = 1

[node name="AttachedCardsBackground" type="ColorRect" parent="CanvasLayer/Info"]
layout_mode = 2
offset_left = 10.0
offset_top = 967.0
offset_right = 312.0
offset_bottom = 1066.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.18359, 0.18359, 0.18359, 1)

[node name="AttachedCardsList" type="ScrollContainer" parent="CanvasLayer/Info"]
layout_direction = 2
layout_mode = 0
offset_left = 14.0
offset_top = 971.0
offset_right = 308.0
offset_bottom = 1062.0
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Info/AttachedCardsList"]
clip_contents = true
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AttachedCardsLabel" type="Node2D" parent="CanvasLayer/Info"]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Info/AttachedCardsLabel"]
offset_left = 200.0
offset_top = 967.0
offset_right = 312.0
offset_bottom = 990.0
color = Color(0.117647, 0.117647, 0.117647, 0.337255)

[node name="Label" type="Label" parent="CanvasLayer/Info/AttachedCardsLabel"]
offset_left = 200.0
offset_top = 967.0
offset_right = 312.0
offset_bottom = 990.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 15
text = "Attached Cards"
horizontal_alignment = 2

[node name="Host" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 960.0
offset_top = 336.0
offset_right = 1069.0
offset_bottom = 390.0
text = "Host"

[node name="Join" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 960.0
offset_top = 396.0
offset_right = 1069.0
offset_bottom = 450.0
text = "Join"

[node name="MenuButton" type="MenuButton" parent="CanvasLayer"]
offset_left = 39.0
offset_top = 352.0
offset_right = 477.0
offset_bottom = 429.0
theme_override_font_sizes/font_size = 50
text = "Choose Deck"
flat = false

[node name="IPPrompt" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_left = 763.0
offset_top = 334.0
offset_right = 1054.0
offset_bottom = 446.0
color = Color(0.0885599, 0.0885599, 0.0885599, 0.768627)

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/IPPrompt"]
layout_mode = 0
offset_left = 8.0
offset_top = 55.0
offset_right = 278.0
offset_bottom = 94.0
theme_override_font_sizes/font_size = 30
placeholder_text = "localhost"

[node name="Label" type="Label" parent="CanvasLayer/IPPrompt"]
layout_mode = 0
offset_left = 11.0
offset_right = 279.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 30
text = "Enter IP Address"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Steam Connect" type="Button" parent="CanvasLayer"]
offset_left = 850.0
offset_top = 386.0
offset_right = 1149.0
offset_bottom = 438.0
theme_override_font_sizes/font_size = 30
disabled = true
text = "Connect with Steam"

[node name="Direct Connect" type="Button" parent="CanvasLayer"]
offset_left = 880.0
offset_top = 448.0
offset_right = 1114.0
offset_bottom = 498.0
theme_override_font_sizes/font_size = 30
disabled = true
text = "Connect with IP"

[node name="Title" type="Label" parent="CanvasLayer"]
offset_left = 739.0
offset_top = 8.0
offset_right = 1230.0
offset_bottom = 145.0
theme_override_font_sizes/font_size = 100
text = "holoDelta"

[node name="Subtitle" type="Label" parent="CanvasLayer/Title"]
layout_mode = 0
offset_left = -19.0
offset_top = 118.0
offset_right = 499.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 30
text = "An Unofficial Hololive TCG Simulator"

[node name="SteamHost" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 960.0
offset_top = 336.0
offset_right = 1069.0
offset_bottom = 390.0
theme_override_font_sizes/font_size = 30
text = "Host"

[node name="SteamJoin" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 960.0
offset_top = 396.0
offset_right = 1069.0
offset_bottom = 450.0
theme_override_font_sizes/font_size = 30
text = "Join"

[node name="LobbyList" type="ScrollContainer" parent="CanvasLayer"]
visible = false
offset_left = 830.0
offset_top = 370.0
offset_right = 1169.0
offset_bottom = 995.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/LobbyList"]
layout_mode = 2

[node name="CancelLobby" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 1154.0
offset_top = 564.0
offset_right = 1257.0
offset_bottom = 614.0
theme_override_font_sizes/font_size = 30
text = "Cancel"

[node name="CancelIPJoin" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 1154.0
offset_top = 564.0
offset_right = 1257.0
offset_bottom = 614.0
theme_override_font_sizes/font_size = 30
text = "Cancel"

[node name="Deck Creation" type="Button" parent="CanvasLayer"]
offset_left = 40.0
offset_top = 246.0
offset_right = 475.0
offset_bottom = 323.0
theme_override_font_sizes/font_size = 50
text = "Create/Edit Deck"

[node name="Exit" type="Button" parent="CanvasLayer"]
offset_left = 1658.0
offset_top = 991.0
offset_right = 1911.0
offset_bottom = 1068.0
theme_override_font_sizes/font_size = 50
text = "Exit Game"

[node name="MainMenu" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 1581.0
offset_top = 1026.0
offset_right = 1916.0
offset_bottom = 1076.0
theme_override_colors/font_color = Color(0.760664, 0.18676, 0.19329, 1)
theme_override_font_sizes/font_size = 30
text = "Return to Main Menu"

[node name="Confirmation" type="ColorRect" parent="CanvasLayer/MainMenu"]
visible = false
top_level = true
layout_mode = 0
offset_left = 593.0
offset_top = 382.0
offset_right = 1397.0
offset_bottom = 653.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/Confirmation"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -389.0
offset_right = 389.0
offset_bottom = 110.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Really Return to Menu?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Yes" type="Button" parent="CanvasLayer/MainMenu/Confirmation"]
layout_mode = 0
offset_left = 236.0
offset_top = 148.0
offset_right = 310.0
offset_bottom = 211.0
theme_override_font_sizes/font_size = 40
text = "Yes"

[node name="No" type="Button" parent="CanvasLayer/MainMenu/Confirmation"]
layout_mode = 0
offset_left = 472.0
offset_top = 148.0
offset_right = 546.0
offset_bottom = 211.0
theme_override_font_sizes/font_size = 40
text = "No"

[node name="Options" type="TextureButton" parent="CanvasLayer"]
y_sort_enabled = true
offset_left = 1816.0
offset_top = 22.0
offset_right = 2216.0
offset_bottom = 422.0
scale = Vector2(0.2, 0.2)
toggle_mode = true
texture_normal = ExtResource("4_n5n8m")
texture_pressed = ExtResource("5_13mvd")

[node name="OptionBackground" type="ColorRect" parent="CanvasLayer/Options"]
visible = false
layout_mode = 0
offset_left = -2445.0
offset_top = -45.0
offset_right = -60.0
offset_bottom = 2800.0
color = Color(0, 0, 0, 0.623529)

[node name="CheckUnrevealed" type="TextureButton" parent="CanvasLayer/Options/OptionBackground"]
layout_mode = 0
offset_left = 49.9994
offset_top = 40.0
offset_right = 449.999
offset_bottom = 440.0
toggle_mode = true
texture_normal = ExtResource("6_1x0cl")
texture_pressed = ExtResource("7_n8awk")

[node name="Unrevealed" type="Label" parent="CanvasLayer/Options/OptionBackground/CheckUnrevealed"]
layout_mode = 0
offset_left = 414.999
offset_top = 90.0
offset_right = 2135.0
offset_bottom = 295.0
theme_override_font_sizes/font_size = 150
text = "Allow Unrevealed Cards"

[node name="InfoButton" type="Button" parent="CanvasLayer"]
offset_left = 7.0
offset_top = 1044.0
offset_right = 46.0
offset_bottom = 1075.0
text = "info"

[node name="DeckLocation" type="Label" parent="CanvasLayer/InfoButton"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.01
anchor_bottom = 0.015
offset_left = 1.0
offset_top = -26.0
offset_right = 1629.8
offset_bottom = -3.465
text = "Decks are located at "

[node name="Popup" type="Popup" parent="CanvasLayer"]
size = Vector2i(1920, 1080)

[node name="Label" type="Label" parent="CanvasLayer/Popup"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -21.0
offset_right = 150.0
offset_bottom = 21.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "vspvjfspvs"

[node name="LanguageSelect" type="MenuButton" parent="CanvasLayer"]
offset_left = 1811.0
offset_top = 112.0
offset_right = 1907.0
offset_bottom = 164.0
theme_override_font_sizes/font_size = 25
text = "English"
flat = false
item_count = 2
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "日本語"
popup/item_1/id = 1

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, 200)
zoom = Vector2(0.6, 0.6)
script = ExtResource("2_pceco")
zoom_min = 0.25
zoom_max = 3.0
pan_speed = 300.0
pan_margin = 0.0
drag_inertia = 0.0

[connection signal="pressed" from="CanvasLayer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/Join" to="." method="_on_join_pressed"]
[connection signal="text_submitted" from="CanvasLayer/IPPrompt/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="CanvasLayer/Steam Connect" to="." method="_on_steam_connect_pressed"]
[connection signal="pressed" from="CanvasLayer/Direct Connect" to="." method="_on_direct_connect_pressed"]
[connection signal="pressed" from="CanvasLayer/SteamHost" to="." method="_on_steam_host_pressed"]
[connection signal="pressed" from="CanvasLayer/SteamJoin" to="." method="_on_steam_join_pressed"]
[connection signal="pressed" from="CanvasLayer/CancelLobby" to="." method="_on_cancel_lobby_pressed"]
[connection signal="pressed" from="CanvasLayer/CancelIPJoin" to="." method="_on_cancel_ip_join_pressed"]
[connection signal="pressed" from="CanvasLayer/Deck Creation" to="." method="_on_deck_creation_pressed"]
[connection signal="pressed" from="CanvasLayer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/Confirmation/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/Confirmation/No" to="." method="_on_no_pressed"]
[connection signal="pressed" from="CanvasLayer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CanvasLayer/Options/OptionBackground/CheckUnrevealed" to="." method="_on_check_unrevealed_pressed"]
[connection signal="pressed" from="CanvasLayer/InfoButton" to="." method="_on_info_button_pressed"]
